started prototyping the layout for main content

--- a/index.html
+++ b/index.html
@@ -2,3 +2,31 @@
 layout: default
 ---
 
+<article class="about">
+
+	<section class="about__intro">
+		<h1 class="about--header">About</h1>
+		<p>I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new frameworks, technologies and languages keep appearing there is always something new to keep me on my toes.</p>
+	</section>
+
+	<section class="about__experience">
+		<h1 class="about--header">Experience</h1>
+		<p>I have experience with</p>
+
+		<ul class="about__experience--skills">
+			<li>a</li>
+			<li>b</li>
+			<li>c</li>
+			<li>d</li>
+			<li>e</li>
+			<li>f</li>
+			<li>g</li>
+			<li>h</li>
+		</ul>
+	</section>
+
+	<section class="about__projects">
+		<h1 class="about--header">Projects</h1>
+		<p>Here are some projects I've worked on</p>
+	</section>
+</article>
