--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@ layout: default
 
 	<section class="about__intro">
 		<h1 class="about--header">About</h1>
-		<p>I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new frameworks, technologies and languages keep appearing there is always something new to keep me on my toes.</p>
+		<p class="about--description">I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new frameworks, technologies and languages keep appearing there is always something new to keep me on my toes.</p>
 	</section>
 
 	<section class="about__experience">
+		<div class="about__test">
+
 		<h1 class="about--header">Experience</h1>
-		<p>I have experience with</p>
+		<p class="about--description">I have experience with</p>
 
 		<ul class="about__experience--skills">
 			<li>a</li>
@@ -23,10 +25,41 @@ layout: default
 			<li>g</li>
 			<li>h</li>
 		</ul>
+		</div>
+		<div class="about__tail"></div>
 	</section>
 
 	<section class="about__projects">
 		<h1 class="about--header">Projects</h1>
-		<p>Here are some projects I've worked on</p>
+		<p class="about--description">Here are some projects I've worked on</p>
+
+		<section class="project">
+			<div>
+				<h1>Portfolio</h1>
+				<p class="project__description">Lorem ipsum thing something blah la la</p>
+			</div>
+			<div class="fake-image"></div>
+		</section>
+
+		<section class="project">
+			<div>
+				<h1>Portfolio</h1>
+				<p class="project__description">Lorem ipsum thing something blah la la</p>
+			</div>
+			<div class="fake-image"></div>
+		</section>
+
+		<section class="project">
+			<div>
+				<h1>Portfolio</h1>
+				<p class="project__description">Lorem ipsum thing something blah la la</p>
+			</div>
+			<div class="fake-image"></div>
+		</section>
+	</section>
+
+	<section class="about__github">
+		<h1 class="about--header">Want to see more?</h1>
+		<p class="about--description">Check out my github at <a href="#">github.com/patrick-lafferty</a> or visit my <a href="#">blog</a></p>
 	</section>
 </article>
