--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@ layout: default
 		<p class="about--description">I have experience with</p>
 
 		<ul class="about__experience--skills">
-			<li>a</li>
-			<li>b</li>
-			<li>c</li>
-			<li>d</li>
-			<li>e</li>
-			<li>f</li>
-			<li>g</li>
-			<li>h</li>
+			<li>HTML5</li>
+			<li>CSS3</li>
+			<li>JavaScript</li>
+			<li>C#</li>
+			<li>ASP.NET Core</li>
+			<li>AngularJS 1</li>
+			<li>TypeScript</li>
+			<li>Karma</li>
+			<li>Sass</li>
 		</ul>
 		</div>
 		<div class="about__tail"></div>
@@ -35,24 +36,24 @@ layout: default
 
 		<section class="project">
 			<div>
-				<h1>Portfolio</h1>
-				<p class="project__description">Lorem ipsum thing something blah la la</p>
+				<h1>patricklafferty.ca</h1>
+				<p class="project__description">My personal portfolio and blog. It uses modern HTML and CSS features and is built using Jekyll.</p>
 			</div>
 			<div class="fake-image"></div>
 		</section>
 
 		<section class="project">
 			<div>
-				<h1>Portfolio</h1>
-				<p class="project__description">Lorem ipsum thing something blah la la</p>
+				<h1>spaceyyz.ca</h1>
+				<p class="project__description">An ASP.NET Core rewrite of the previous version</p>
 			</div>
 			<div class="fake-image"></div>
 		</section>
 
 		<section class="project">
 			<div>
-				<h1>Portfolio</h1>
-				<p class="project__description">Lorem ipsum thing something blah la la</p>
+				<h1>patrick-lafferty.github.io/spaceyyz</h1>
+				<p class="project__description">An AngularJS SPA that uses Firebase for the database and authentication, and Karma/Mocha/Chai for testing and code coverage.</p>
 			</div>
 			<div class="fake-image"></div>
 		</section>
@@ -60,6 +61,6 @@ layout: default
 
 	<section class="about__github">
 		<h1 class="about--header">Want to see more?</h1>
-		<p class="about--description">Check out my github at <a href="#">github.com/patrick-lafferty</a> or visit my <a href="#">blog</a></p>
+		<p class="about--description">Check out my <a href="#">github</a> or visit my <a href="#">blog</a></p>
 	</section>
 </article>
