picked the fonts, simplified the main colours to just two to clean up the look, added the links bar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <article class="about">
 
 	<section class="about__intro">
-		<h1 class="about--header">About</h1>
+		<h1 class="about--header">About me</h1>
 		<p class="about--description">I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new frameworks, technologies and languages keep appearing there is always something new to keep me on my toes.</p>
 	</section>
 
@@ -36,7 +36,7 @@ layout: default
 
 		<section class="project">
 			<div>
-				<h1>patricklafferty.ca</h1>
+				<h1 class="project__name">patricklafferty.ca</h1>
 				<p class="project__description">My personal portfolio and blog. It uses modern HTML and CSS features and is built using Jekyll.</p>
 			</div>
 			<div class="fake-image"></div>
@@ -44,7 +44,7 @@ layout: default
 
 		<section class="project">
 			<div>
-				<h1>spaceyyz.ca</h1>
+				<h1 class="project__name">spaceyyz.ca</h1>
 				<p class="project__description">An ASP.NET Core rewrite of the previous version</p>
 			</div>
 			<div class="fake-image"></div>
@@ -52,7 +52,7 @@ layout: default
 
 		<section class="project">
 			<div>
-				<h1>patrick-lafferty.github.io/spaceyyz</h1>
+				<h1 class="project__name">patrick-lafferty.github.io/spaceyyz</h1>
 				<p class="project__description">An AngularJS SPA that uses Firebase for the database and authentication, and Karma/Mocha/Chai for testing and code coverage.</p>
 			</div>
 			<div class="fake-image"></div>
