made the links in the link bar clickable, started to bring the blog back

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 		<div class="about__tail"></div>
 	</section>
 
-	<section class="about__projects">
+	<section class="about__projects" id="projects">
 		<h1 class="about--header">Projects</h1>
 		<p class="about--description">Here are some projects I've worked on</p>
 
