changed fonts to load from google's cdn, added syntax highlighting, made images responsive

--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@ layout: default
 
 	<section class="about__github">
 		<h1 class="about--header">Want to see more?</h1>
-		<p class="about--description">Check out my <a href="#">github</a> or visit my <a href="#">blog</a></p>
+		<p class="about--description">Check out my <a href="#">github</a> or visit my <a href="/blog">blog</a></p>
 	</section>
 </article>
