--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 	<section class="about__intro">
 		<h1 class="about--header">About me</h1>
-		<p class="about--description">I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new frameworks, technologies and languages keep appearing there is always something new to keep me on my toes.</p>
+		<p class="about--description">I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new web frameworks, technologies and languages keep popping up there is always something new to keep me on my toes.</p>
 	</section>
 
 	<section class="about__experience">
@@ -37,23 +37,23 @@ layout: default
 		<section class="project">
 			<div>
 				<h1 class="project__name">patricklafferty.ca</h1>
-				<p class="project__description">My personal portfolio and blog. It uses modern HTML and CSS features and is built using Jekyll.</p>
+				<p class="project__description">My personal portfolio and blog. It uses modern HTML and CSS features with a pinch of JavaScript and is built using Jekyll. Features a responsive design and has appropriate fallbacks to look good on multiple browsers.</p>
 			</div>
 			<div class="fake-image"></div>
 		</section>
 
 		<section class="project">
 			<div>
-				<h1 class="project__name">spaceyyz.ca</h1>
-				<p class="project__description">An ASP.NET Core rewrite of the previous version</p>
+				<a href="http://patrick-lafferty.github.io/spaceyyz"><h1 class="project__name">patrick-lafferty.github.io/spaceyyz</h1></a>
+				<p class="project__description">An AngularJS SPA that uses Firebase for the database and authentication, and Karma/Mocha/Chai for testing and code coverage. It is a toy app that a fictional space transport company would use to manage its daily operations.</p>
 			</div>
 			<div class="fake-image"></div>
 		</section>
 
 		<section class="project">
 			<div>
-				<h1 class="project__name">patrick-lafferty.github.io/spaceyyz</h1>
-				<p class="project__description">An AngularJS SPA that uses Firebase for the database and authentication, and Karma/Mocha/Chai for testing and code coverage.</p>
+				<a href="https://spaceyyz.ca"><h1 class="project__name">spaceyyz.ca (temporarily offline)</h1></a> 
+				<p class="project__description">An ASP.NET Core rewrite of the above Angular project. It features a more user-centric design and has a richer identity/authentication layer that sections off site features by roles. </p>
 			</div>
 			<div class="fake-image"></div>
 		</section>
@@ -61,6 +61,7 @@ layout: default
 
 	<section class="about__github">
 		<h1 class="about--header">Want to see more?</h1>
-		<p class="about--description">Check out my <a href="#">github</a> or visit my <a href="/blog">blog</a></p>
+		<p class="about--description">Check out my <a href="https://github.com/patrick-lafferty">github</a> or visit my <a href="/blog">blog</a>. Want to get in touch? Email me at <a href="mailto:patrick_lafferty@outlook.com">patrick_lafferty@outlook.com</a></p>
 	</section>
+
 </article>
