updated work to include rain namechange and added labs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 			<li>ASP.NET Core</li>
 			<li>AngularJS 1</li>
 			<li>TypeScript</li>
-			<li>Karma</li>
+			<li>React</li>
 			<li>Sass</li>
 		</ul>
 		</div>
@@ -39,7 +39,7 @@ layout: default
 
 		<section class="project">
 			<div>
-				<a href="https://github.com/patrick-lafferty/lush"><h1 class="project__name">Lush</h1></a>
+				<a href="https://github.com/patrick-lafferty/rain"><h1 class="project__name">Rain</h1></a>
 				<p class="project__description">A Unix shell that uses Racket as its scripting language.
 					It features a Racket interpreter, lexer that provides syntax colouring/bracket highlighting/autocompletion
 					and more.</p>
@@ -54,6 +54,14 @@ layout: default
 					adding role based authorization and designed the system used to push updates to a separate
 					signage app. It used PHP, MySQL, JavaScript and WordPress.
 				</p>
+			</div>
+			<div class="fake-image"></div>
+		</section>
+
+		<section class="project">
+			<div>
+				<a href="https://patrick-lafferty.github.io/labs/"><h1 class="project__name">Labs</h1></a>
+				<p class="project__description">A React app I wrote in TypeScript to demonstrate some web technologies. It currently has an interactive demo for CSS Grids.</p>
 			</div>
 			<div class="fake-image"></div>
 		</section>
