Redesign about - intro

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@ layout: default
 <article class="about">
 
 	<section class="about__intro">
-		<h1 class="about--header">About me</h1>
-		<p class="about--description">I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new web frameworks, technologies and languages keep popping up there is always something new to keep me on my toes.</p>
+		<div class="about__banner">
+			<div class="banner__hang">
+				<h1 class="about__header">About me</h1>
+			</div>
+		</div>
+		<p class="about__description">I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new web frameworks, technologies and languages keep popping up there is always something new to keep me on my toes.</p>
 	</section>
 
 	<section class="about__experience">
