Redesign experience section

--- a/index.html
+++ b/index.html
@@ -6,35 +6,44 @@ layout: default
 
 	<section class="about__intro">
 		<div class="about__banner">
-			<div class="banner__hang">
-				<h1 class="about__header">About me</h1>
-			</div>
+			<h1 class="about__header">About me</h1>
 		</div>
+
 		<p class="about__description">I'm a self-taught web developer from Toronto. I love to constantly learn new things, and since new web frameworks, technologies and languages keep popping up there is always something new to keep me on my toes.</p>
 	</section>
 
-	<section class="about__experience">
-		<div class="about__test">
+	<section class="about__intro about__experience">
 
-		<h1 class="about--header">Experience</h1>
-		<p class="about--description">I have experience with</p>
+		<h1 class="about__header experience__header">Experience</h1>
 
-		<ul class="about__experience--skills">
-			<li>PHP</li>
-			<li>MySQL</li>
-			<li>HTML5</li>
-			<li>CSS3</li>
-			<li>JavaScript</li>
-			<li>C#</li>
-			<li>Racket</li>
-			<li>ASP.NET Core</li>
-			<li>AngularJS 1</li>
-			<li>TypeScript</li>
-			<li>React</li>
-			<li>Sass</li>
-		</ul>
-		</div>
-		<div class="about__tail"></div>
+		<section class="experience">
+			<div class="experience__side">
+				<div class="side__shape">
+					<p class="side__content">Languages</p>
+				</div>
+
+				<p class="experience__item">C++</p>
+				<p class="experience__item">JavaScript</p>
+				<p class="experience__item">TypeScript</p>
+				<p class="experience__item">PHP</p>
+
+			</div>
+
+			<div class="experience__separator"></div>
+
+			<div class="experience__side">
+				<div class="side__shape side__shape--right">
+					<p class="side__content side__content--right right">Libraries / Frameworks</p>
+				</div>
+
+				<p class="experience__item right">React</p>
+				<p class="experience__item right">jQuery</p>
+				<p class="experience__item right">WordPress</p>
+				<p class="experience__item right">MySQL</p>
+			</div>
+
+		</section>
+
 	</section>
 
 	<section class="about__projects" id="projects">
