--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ layout: default
 					<h1 class="project__name">Saturn</h1>
 				</a>
 
-				<p class="project__brief">Brief:</p>
+				<p class="project__brief">At a glance:</p>
 				<ul class="project__brief">
-					<li>Feature A</li>
-					<li>Feature B</li>
-					<li>Feature C</li>
+					<li>C++17</li>
+					<li>Systems Design</li>
+					<li>Low-level</li>
 				</ul>
 
 			</div>
@@ -77,11 +77,11 @@ layout: default
 					<h1 class="project__name">Saturn-os</h1>
 				</a>
 
-				<p class="project__brief">Brief:</p>
+				<p class="project__brief">At a glance:</p>
 				<ul class="project__brief">
-					<li>Feature A</li>
-					<li>Feature B</li>
-					<li>Feature C</li>
+					<li>ReactJS</li>
+					<li>JavaScript</li>
+					<li>Python</li>
 				</ul>
 
 			</div>
@@ -99,11 +99,11 @@ layout: default
 					<h1 class="project__name">Rain</h1>
 				</a>
 
-				<p class="project__brief">Brief:</p>
+				<p class="project__brief">At a glance:</p>
 				<ul class="project__brief">
-					<li>Feature A</li>
-					<li>Feature B</li>
-					<li>Feature C</li>
+					<li>Racket</li>
+					<li>Lexer</li>
+					<li>Interpreter</li>
 				</ul>
 
 			</div>
@@ -120,11 +120,11 @@ layout: default
 					<h1 class="project__name">SpaceYYZ</h1>
 				</a>
 
-				<p class="project__brief">Brief:</p>
+				<p class="project__brief">At a glance:</p>
 				<ul class="project__brief">
-					<li>Feature A</li>
-					<li>Feature B</li>
-					<li>Feature C</li>
+					<li>AngularJS</li>
+					<li>JavaScript</li>
+					<li>Responsive</li>
 				</ul>
 
 			</div>
@@ -141,11 +141,11 @@ layout: default
 
 					<h1 class="about__banner project__banner project__name">HousingDB</h1>
 	
-					<p class="project__brief">Brief:</p>
+					<p class="project__brief">At a glance:</p>
 					<ul class="project__brief">
-						<li>Feature A</li>
-						<li>Feature B</li>
-						<li>Feature C</li>
+						<li>PHP</li>
+						<li>MySQL</li>
+						<li>WordPress</li>
 					</ul>
 	
 				</div>
@@ -159,9 +159,12 @@ layout: default
 
 	</section>
 
-	<section class="about__github">
-		<h1 class="about--header">Want to see more?</h1>
-		<p class="about--description">Check out my <a href="https://github.com/patrick-lafferty">github</a> or visit my <a href="/blog">blog</a>. Want to get in touch? Email me at <a href="mailto:patrick_lafferty@outlook.com">patrick_lafferty@outlook.com</a></p>
+	<section class="about__intro see-more">
+		<div class="about__banner see-more__banner">
+			<h1 class="about__header">Want to see more?</h1>
+		</div>
+
+		<p class="about__description">Check out my <a href="https://github.com/patrick-lafferty">github</a> or visit my <a href="/blog">blog</a>. Want to get in touch? Email me at <a href="mailto:patrick_lafferty@outlook.com">patrick_lafferty@outlook.com</a></p>
 	</section>
 
 </article>
