Make design more responsive

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@ layout: default
 		<section class="project">
 			<div class="about__banner project__banner">
 
-				<a class="about__banner project__banner" href="https://github.com/patrick-lafferty/saturn">
-					<h1 class="project__name">Saturn</h1>
-				</a>
+				<h1 class="project__name">
+					<a href="https://github.com/patrick-lafferty/saturn">
+						Saturn
+					</a>
+				</h1>
 
 				<p class="project__brief">At a glance:</p>
 				<ul class="project__brief">
@@ -73,9 +75,11 @@ layout: default
 		<section class="project">
 			<div class="about__banner project__banner">
 
-				<a class="about__banner project__banner" href="https://saturn-os.org">
-					<h1 class="project__name">Saturn-os</h1>
-				</a>
+				<h1 class="project__name">
+					<a href="https://saturn-os.org">
+						Saturn-os
+					</a>
+				</h1>
 
 				<p class="project__brief">At a glance:</p>
 				<ul class="project__brief">
@@ -86,7 +90,7 @@ layout: default
 
 			</div>
 
-			<p class="project__description">Homepage and documentation viewer for Saturn OS. The /documentation page
+			<p class="project__description">Homepage and documentation viewer for Saturn OS. The documentation page
 				is a ReactJS app that uses metadata extracted from Saturn's source repo using a Python script
 				and libclang.
 			</p>
@@ -95,9 +99,11 @@ layout: default
 		<section class="project">
 			<div class="about__banner project__banner">
 
-				<a class="about__banner project__banner" href="https://github.com/patrick-lafferty/rain">
-					<h1 class="project__name">Rain</h1>
-				</a>
+				<h1 class="project__name">
+					<a href="https://github.com/patrick-lafferty/rain">
+						Rain
+					</a>
+				</h1>
 
 				<p class="project__brief">At a glance:</p>
 				<ul class="project__brief">
@@ -116,9 +122,11 @@ layout: default
 		<section class="project">
 			<div class="about__banner project__banner">
 
-				<a class="about__banner project__banner" href="http://patrick-lafferty.github.io/spaceyyz">
-					<h1 class="project__name">SpaceYYZ</h1>
-				</a>
+				<h1 class="project__name">
+					<a href="http://patrick-lafferty.github.io/spaceyyz">
+						SpaceYYZ
+					</a>
+				</h1>
 
 				<p class="project__brief">At a glance:</p>
 				<ul class="project__brief">
@@ -139,7 +147,7 @@ layout: default
 
 			<div class="about__banner project__banner">
 
-					<h1 class="about__banner project__banner project__name">HousingDB</h1>
+					<h1 class="project__name">HousingDB</h1>
 	
 					<p class="project__brief">At a glance:</p>
 					<ul class="project__brief">
